--- a/tests/dummy/app/styles/app.css
+++ b/tests/dummy/app/styles/app.css
@@ -6,11 +6,11 @@
 @import url('components/_code.css');
 
 html {
-  font-size: var(--baseFontSize);
+  font-size: 62.5%;
 }
 
 body {
-  font-size: var(--bodyFontSize);
+  font-size: 1.6rem;
 
   /* So text looks much better in Chrome/Safari */
 
@@ -92,7 +92,7 @@ h3 {
   display: inline-block;
   padding: 0.6rem 1rem;
   cursor: pointer;
-  background-color: rgba(var(--white), 0.5);
+  background-color: rgba(white, 0.5);
   position: relative;
 }
 
